--- a/Custom-Elements/index.html
+++ b/Custom-Elements/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <my-element></my-element>
     <script type="module" src="./my-component.js"></script>
 
 </body>
