Arreglos de tabs

--- a/slot/index.html
+++ b/slot/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <h2>titulo por fuera del dom</h2>
-    <my-element>Este texto saldra en la etiqueta slot</my-element>
+    <my-element>Este texto saldra en la etiqueta slot puesta fuera del componente</my-element>
     <script type="module" src="./my-component.js"></script>
 
 </body>
