Stilos con variables en el componente

--- a/8-style-host-slotted/index.html
+++ b/8-style-host-slotted/index.html
@@ -5,10 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        my-component {
+            --primary-color: yellow;
+            --secondary-color: red;
+            --tertiary-color: green;
+
+        }
+    </style>
 </head>
 
 <body>
-
     <my-component titulo="Titulo componente 1" parrafo="parrafo componente 1"></my-component>
     <my-component titulo="Titulo componente 2" parrafo="parrafo componente 2 con estilos de clase" class="blue">
     </my-component>
